--- a/src/components/category-preview/category-preview.styles.scss
+++ b/src/components/category-preview/category-preview.styles.scss
@@ -10,8 +10,8 @@
   }
 
   .preview {
-    display: grid;
+    display: flex;
     grid-template-columns: repeat(4, 1fr);
-    column-gap: 20px;
+    column-gap: 100px;
   }
 }
